bases/apps/psuite/gollum/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: gollum
    app.kubernetes.io/name: gollum
  name: gollum
  namespace: psuite
spec:
  ports:
  - name: http
    port: 4567
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/instance: gollum
    app.kubernetes.io/name: gollum
  type: ClusterIP
